--- a/src/templates/layout.html.twig
+++ b/src/templates/layout.html.twig
@@ -16,14 +16,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{% block title %}{% endblock %}   - Control Station</title>
+        <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
         <link rel="shortcut icon" href="{{ app.request.basePath }}/media/img/favicon.ico" />
 
         <link rel="stylesheet" href="{{ app.request.basePath }}/media/css/bootstrap.min.css">
-        <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+        <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.min.css" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="{{ app.request.basePath }}/media/css/main.css">
 
@@ -45,31 +45,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="{{ app.url_generator.generate('home') }}">Control Station</a>
+              <a class="navbar-brand" href="{{ app.url_generator.generate('home') }}">Silex in the Cavern</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li{% if active_page == 'home' %} class="active"{% endif %}><a href="{{ app.url_generator.generate('home') }}">{{ 'Homepage'|trans }}</a></li>
-                <li{% if active_page == 'monitoring' %} class="active"{% endif %}><a href="{{ app.url_generator.generate('monitoring') }}">Monitoring</a></li>
-                <li{% if active_page == 'sites' %} class="active"{% endif %}><a href="{{ app.url_generator.generate('site') }}">Sites</a></li>
-                {# <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
-                  </ul>
-                </li> #}
-              </ul>
-              <!--<ul class="nav navbar-nav navbar-right">
-                <li><a href="../navbar/">Default</a></li>
-                <li><a href="../navbar-static-top/">Static top</a></li>
-                <li class="active"><a href="./">Fixed top</a></li>
-              </ul>-->
+                <li{% if active_page == 'admin' %} class="active"{% endif %}><a href="{{ app.url_generator.generate('admin') }}">Administration</a></li>
             </div><!--/.nav-collapse -->
           </div>
         </div>
@@ -99,10 +80,10 @@
       </footer>
 
 
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-      <script>window.jQuery || document.write('<script src="{{ app.request.basePath }}/media/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+      <script>window.jQuery || document.write('<script src="{{ app.request.basePath }}/media/js/vendor/jquery.min.js"><\/script>')</script>
 
-      <script src="{{ app.request.basePath }}/media/js/vendor/bootstrap.min.js"></script>
+      <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
       <script src="{{ app.request.basePath }}/media/js/plugins.js"></script>
       <script src="{{ app.request.basePath }}/media/js/main.js"></script>
