--- a/src/templates/login.html.twig
+++ b/src/templates/login.html.twig
@@ -92,10 +92,10 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{ app.request.basePath }}/media/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ app.request.basePath }}/media/js/vendor/jquery.min.js"><\/script>')</script>
 
-    <script src="{{ app.request.basePath }}/media/js/vendor/bootstrap.min.js"></script>
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
     <script src="{{ app.request.basePath }}/media/js/plugins.js"></script>
     <script src="{{ app.request.basePath }}/media/js/main.js"></script>
